GCA-24 fix services after review